@@ -1,105 +1,188 @@
 package ec.edu.ups.icc.fundamentos01.products.services;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
+import ec.edu.ups.icc.fundamentos01.categories.entities.CategoryEntity;
+import ec.edu.ups.icc.fundamentos01.categories.repositories.CategoryRepository;
+import ec.edu.ups.icc.fundamentos01.core.exceptions.domain.ConflictException;
+import ec.edu.ups.icc.fundamentos01.core.exceptions.domain.NotFoundException;
 import ec.edu.ups.icc.fundamentos01.products.dtos.CreateProductDto;
 import ec.edu.ups.icc.fundamentos01.products.dtos.PartialUpdateProductDto;
-import ec.edu.ups.icc.fundamentos01.products.dtos.UpdateProductDto;
 import ec.edu.ups.icc.fundamentos01.products.dtos.ProductResponseDto;
+import ec.edu.ups.icc.fundamentos01.products.dtos.UpdateProductDto;
 import ec.edu.ups.icc.fundamentos01.products.entities.ProductEntity;
-import ec.edu.ups.icc.fundamentos01.products.mappers.ProductMapper;
-import ec.edu.ups.icc.fundamentos01.products.models.ProductModel;
 import ec.edu.ups.icc.fundamentos01.products.repositories.ProductRepository;
+import ec.edu.ups.icc.fundamentos01.users.entities.UserEntity;
+import ec.edu.ups.icc.fundamentos01.users.repositories.UserRepository;
 
 @Service
 public class ProductServiceImpl implements ProductService {
 
-    private final ProductRepository repository;
-    private final ProductMapper mapper;
+    private final ProductRepository productRepository;
+    private final UserRepository userRepository;
+    private final CategoryRepository categoryRepository;
 
-    public ProductServiceImpl(ProductRepository repository, ProductMapper mapper) {
-        this.repository = repository;
-        this.mapper = mapper;
+    public ProductServiceImpl(
+            ProductRepository productRepository,
+            UserRepository userRepository,
+            CategoryRepository categoryRepository
+    ) {
+        this.productRepository = productRepository;
+        this.userRepository = userRepository;
+        this.categoryRepository = categoryRepository;
     }
 
     @Override
     public List<ProductResponseDto> findAll() {
-        return repository.findAll().stream()
-                .filter(entity -> !entity.isDeleted())
-                .map(mapper::toModel)
-                .map(mapper::toResponseDto)
-                .collect(Collectors.toList());
+        return productRepository.findByDeletedFalse()
+                .stream()
+                .map(this::toResponse)
+                .toList();
     }
 
     @Override
     public Object findOne(Long id) {
-        ProductEntity entity = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
-        ProductModel model = mapper.toModel(entity);
-        return mapper.toResponseDto(model);
+        ProductEntity entity = productRepository.findByIdAndDeletedFalse(id)
+                .orElseThrow(() -> new NotFoundException("Product not found"));
+        return toResponse(entity);
     }
 
     @Override
     public ProductResponseDto create(CreateProductDto dto) {
-        ProductModel model = mapper.toModel(dto);
-        ProductEntity entity = mapper.toEntity(model);
-        ProductEntity savedEntity = repository.save(entity);
-        return mapper.toResponseDto(mapper.toModel(savedEntity));
+        UserEntity owner = userRepository.findById(dto.getUserId())
+                .orElseThrow(() -> new NotFoundException("User not found"));
+
+        if (owner.isDeleted()) {
+            throw new NotFoundException("User not found");
+        }
+
+        CategoryEntity category = categoryRepository.findById(dto.getCategoryId())
+                .orElseThrow(() -> new NotFoundException("Category not found"));
+
+        if (category.isDeleted()) {
+            throw new NotFoundException("Category not found");
+        }
+
+        if (productRepository.findByNameIgnoreCaseAndDeletedFalse(dto.getName()).isPresent()) {
+            throw new ConflictException("Product name already registered");
+        }
+
+        ProductEntity entity = new ProductEntity();
+        entity.setName(dto.getName());
+        entity.setDescription(dto.getDescription());
+        entity.setPrice(dto.getPrice());
+        entity.setStock(dto.getStock());
+        entity.setOwner(owner);
+        entity.setCategory(category);
+
+        ProductEntity saved = productRepository.save(entity);
+        return toResponse(saved);
     }
 
     @Override
     public Object update(Long id, UpdateProductDto dto) {
-        ProductEntity existing = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
+        ProductEntity entity = productRepository.findByIdAndDeletedFalse(id)
+                .orElseThrow(() -> new NotFoundException("Product not found"));
 
-        if (existing.isDeleted()) {
-            throw new IllegalStateException("No se puede actualizar un producto eliminado");
+        CategoryEntity category = categoryRepository.findById(dto.getCategoryId())
+                .orElseThrow(() -> new NotFoundException("Category not found"));
+
+        if (category.isDeleted()) {
+            throw new NotFoundException("Category not found");
         }
 
-        existing.setName(dto.getName());
-        existing.setDescription(dto.getDescription());
-        existing.setPrice(dto.getPrice());
-        existing.setStock(dto.getStock());
+        entity.setName(dto.getName());
+        entity.setDescription(dto.getDescription());
+        entity.setPrice(dto.getPrice());
+        entity.setStock(dto.getStock());
+        entity.setCategory(category);
 
-        ProductEntity saved = repository.save(existing);
-        return mapper.toResponseDto(mapper.toModel(saved));
+        ProductEntity saved = productRepository.save(entity);
+        return toResponse(saved);
     }
 
     @Override
     public Object partialUpdate(Long id, PartialUpdateProductDto dto) {
-        ProductEntity existing = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
+        ProductEntity entity = productRepository.findByIdAndDeletedFalse(id)
+                .orElseThrow(() -> new NotFoundException("Product not found"));
 
-        if (existing.isDeleted()) {
-            throw new IllegalStateException("No se puede actualizar un producto eliminado");
+        if (dto.getName() != null) entity.setName(dto.getName());
+        if (dto.getDescription() != null) entity.setDescription(dto.getDescription());
+        if (dto.getPrice() != null) entity.setPrice(dto.getPrice());
+        if (dto.getStock() != null) entity.setStock(dto.getStock());
+
+        if (dto.getCategoryId() != null) {
+            CategoryEntity category = categoryRepository.findById(dto.getCategoryId())
+                    .orElseThrow(() -> new NotFoundException("Category not found"));
+
+            if (category.isDeleted()) {
+                throw new NotFoundException("Category not found");
+            }
+
+            entity.setCategory(category);
         }
 
-        if (dto.getName() != null)
-            existing.setName(dto.getName());
-        if (dto.getDescription() != null)
-            existing.setDescription(dto.getDescription());
-        if (dto.getPrice() != null)
-            existing.setPrice(dto.getPrice());
-        if (dto.getStock() != null)
-            existing.setStock(dto.getStock());
-
-        ProductEntity saved = repository.save(existing);
-        return mapper.toResponseDto(mapper.toModel(saved));
+        ProductEntity saved = productRepository.save(entity);
+        return toResponse(saved);
     }
 
     @Override
     public void delete(Long id) {
-        ProductEntity existing = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
+        ProductEntity entity = productRepository.findByIdAndDeletedFalse(id)
+                .orElseThrow(() -> new NotFoundException("Product not found"));
 
-        if (existing.isDeleted()) {
-            throw new IllegalStateException("El producto ya fue eliminado");
+        entity.setDeleted(true);
+        productRepository.save(entity);
+    }
+
+    @Override
+    public List<ProductResponseDto> findByUserId(Long userId) {
+        if (!userRepository.existsByIdAndDeletedFalse(userId)) {
+            throw new NotFoundException("User not found");
         }
 
-        existing.setDeleted(true);
-        repository.save(existing);
+        return productRepository.findByOwner_IdAndDeletedFalse(userId)
+                .stream()
+                .map(this::toResponse)
+                .toList();
+    }
+
+    @Override
+    public List<ProductResponseDto> findByCategoryId(Long categoryId) {
+        if (!categoryRepository.existsByIdAndDeletedFalse(categoryId)) {
+            throw new NotFoundException("Category not found");
+        }
+
+        return productRepository.findByCategory_IdAndDeletedFalse(categoryId)
+                .stream()
+                .map(this::toResponse)
+                .toList();
+    }
+
+    private ProductResponseDto toResponse(ProductEntity entity) {
+        ProductResponseDto dto = new ProductResponseDto();
+        dto.setId(entity.getId());
+        dto.setName(entity.getName());
+        dto.setDescription(entity.getDescription());
+        dto.setPrice(entity.getPrice());
+        dto.setStock(entity.getStock());
+        dto.setCreatedAt(entity.getCreatedAt());
+        dto.setUpdatedAt(entity.getUpdatedAt());
+
+        ProductResponseDto.OwnerDto ownerDto = new ProductResponseDto.OwnerDto();
+        ownerDto.setId(entity.getOwner().getId());
+        ownerDto.setName(entity.getOwner().getName());
+        ownerDto.setEmail(entity.getOwner().getEmail());
+        dto.setOwner(ownerDto);
+
+        ProductResponseDto.CategoryDto categoryDto = new ProductResponseDto.CategoryDto();
+        categoryDto.setId(entity.getCategory().getId());
+        categoryDto.setName(entity.getCategory().getName());
+        categoryDto.setDescription(entity.getCategory().getDescription());
+        dto.setCategory(categoryDto);
+
+        return dto;
     }
 }
